--- a/Rotex-Daikin-CAN.yaml
+++ b/Rotex-Daikin-CAN.yaml
@@ -1,4 +1,4 @@
-############################### Version 1.3.7 #####################################
+############################### Version 0.0.2 #####################################
 substitutions:
   rx_pin: GPIO48
   tx_pin: GPIO47
@@ -29,18 +29,27 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: !secret api_encryption_key
+    key: heqmwzvu7TckUlOZjse5Y2dPSiNR8a5+LZDPmSC3URI=
 
 ota:
   platform: esphome
-  password: !secret ota_password
+  password: heqmwzvu7TckUlOZjse5Y2dPSiNR8a5+LZDPmSC3URI=
 
 
-web_server:  
+web_server:
+
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  ssid: IoT
+  password: VeRoNiKa!!=)!))&
+
+
+# Optional manual IP
+  manual_ip:
+    static_ip: 10.14.0.10
+    gateway: 10.14.0.1
+    subnet: 255.255.248.0
+
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
@@ -51,6 +60,7 @@ wifi:
 captive_portal:
 
  
+
 ############################## Text Sensoren ########################################
 text_sensor:
   - platform: template
@@ -779,6 +789,15 @@ sensor:
     accuracy_decimals: 1
 
   - platform: template
+    name: "Kaeltemitteltemperatur"
+    id: temperature_kaeltemittel
+    unit_of_measurement: "°C"
+    icon: "mdi:thermometer-lines"
+    device_class: "temperature"
+    state_class: "measurement"
+    accuracy_decimals: 1
+
+  - platform: template
     name: "Vorlauftemperatur Heizung (TVBH)"
     id: TVBH
     unit_of_measurement: "°C"
@@ -894,7 +913,7 @@ sensor:
   
 ########################### CAN Nachrichten abfragen #################################################
 interval:
-  - interval: 20s
+  - interval: 60s
     then:
       if:
         condition:
@@ -936,6 +955,10 @@ interval:
           - delay: 500ms
           - canbus.send:
               data: [0x31, 0x00, 0xFA, 0xC1, 0x02, 0x00, 0x00]
+              can_id: 0x680
+          - delay: 500ms
+          - canbus.send:
+              data: [0x31, 0x00, 0xFA, 0xC1, 0x03, 0x00, 0x00]
               can_id: 0x680
           - delay: 500ms
           - canbus.send:
@@ -995,18 +1018,21 @@ interval:
     #    condition:
      #     - lambda: 'return id(interval_active);'
       #  then:
-          - canbus.send:
-              data: [0x31, 0x00, 0xFA, 0x09, 0x30, 0x00, 0x00]
-              can_id: 0x680
-          - delay: 500ms
+
+
           #Energie_Heizung
           - canbus.send:
               data: [0x31, 0x00, 0xFA, 0x09, 0xA7, 0x00, 0x00]
               can_id: 0x680
           - delay: 500ms
+
           #Energie_WW
           - canbus.send:
               data: [0x31, 0x00, 0xFA, 0x09, 0x2C, 0x00, 0x00]
+              can_id: 0x680
+          - delay: 500ms
+          - canbus.send:
+              data: [0x31, 0x00, 0xFA, 0x09, 0x30, 0x00, 0x00]
               can_id: 0x680
           - delay: 500ms
           - canbus.send:
@@ -1128,6 +1154,7 @@ canbus:
              id(Erzeugte_Energie_Gesamt).publish_state(temperature);
              ESP_LOGD("main", "Temperature received over can is %f", temperature);
             }
+
 #Erzeugte Energie WW
     - can_id: 0x180
       then:
@@ -1239,6 +1266,15 @@ canbus:
               ESP_LOGD("main", "Temperature received over can is %f", temperature);
             }
 
+#Warmwasser-Temperaturabfrage 
+    - can_id: 0x180
+      then:
+        - lambda: |-
+            if(x[2]==0xFA and x[3]==0xC1 and x[4] == 0x03) {
+              float temperature =float((float((int((x[6])+( (x[5])<<8))))/10));
+              id(temperature_kaeltemittel).publish_state(temperature);
+              ESP_LOGD("main", "Temperature received over can is %f", temperature);
+            }
 #Vorlauftemperaturabfrage (TVBH)
     - can_id: 0x180
       then:
@@ -1499,4 +1535,4 @@ canbus:
             float wert7 = float(int((x[6])+((x[5])<<8)));
             ESP_LOGD("main", "Antwort von 301 Hex: %x %x %x %x %x %x %x", wert0, wert1, wert2, wert3, wert4, wert5, wert6);
             ESP_LOGD("main", "Antwort von 301 Float: %f", wert7);
-            ESP_LOGI("main", "Antwort von 301 Dez.: %i %i", wert5, wert6);            
+            ESP_LOGI("main", "Antwort von 301 Dez.: %i %i", wert5, wert6);
